@@ -2,18 +2,22 @@
 <!DOCTYPE service_bundle SYSTEM "/usr/share/lib/xml/dtd/service_bundle.dtd.1">
 
 <!--
-	Author 2009-05-08 Peter Eriksson <peter@ifm.liu.se>
-
 	This manifest can be used to manage the remctl daemon using the 
 	Solaris SMF subsystem.
 
-	Import this manifest using: 
+	If remctld is installed somewhere other than /usr/local, change
+	the path to /usr/local/sbin/remctld and /usr/local/share/man
+	below.	Then, import this manifest using:
 
 		svccfg -v import remctld.xml
 	
-        Then activate the daemon with:
+	and activate the daemon with:
 
 		svcadm enable /site/remctld
+
+	Author 2009-05-08 Peter Eriksson <peter@ifm.liu.se>
+
+	See LICENSE for licensing terms.
 -->
 
 <service_bundle type='manifest' name='remctld'>
@@ -23,7 +27,7 @@
 	type='service'
 	version='1'>
 
-        <single_instance />
+	<single_instance />
 
 	<!-- Need / & /usr filesystems mounted, /var mounted read/write -->
 	<dependency
@@ -34,26 +38,26 @@
 		<service_fmri value='svc:/system/filesystem/local' />
 	</dependency>
 
-        <dependency
-            name='network-service'
-            grouping='require_all'
-            restart_on='none'
-            type='service'>
-                <service_fmri value='svc:/network/service' />
-        </dependency>
+	<dependency
+	    name='network-service'
+	    grouping='require_all'
+	    restart_on='none'
+	    type='service'>
+		<service_fmri value='svc:/network/service' />
+	</dependency>
 
-        <dependency
-            name='name-services'
-            grouping='require_all'
-            restart_on='refresh'
-            type='service'>
-                <service_fmri value='svc:/milestone/name-services' />
-        </dependency>
+	<dependency
+	    name='name-services'
+	    grouping='require_all'
+	    restart_on='refresh'
+	    type='service'>
+		<service_fmri value='svc:/milestone/name-services' />
+	</dependency>
 	
 	<exec_method
 		type='method'
 		name='start'
-		exec='/ifm/sbin/remctld -m'
+		exec='/usr/local/sbin/remctld -m'
 		timeout_seconds='60'>
 	</exec_method>
 
@@ -75,7 +79,10 @@
 			</loctext>
 		</common_name>
 		<documentation>
-			<manpage title='named' section='8' manpath='/ifm/share/man' />
+			<manpage
+				title='named'
+				section='8'
+				manpath='/usr/local/share/man' />
 		</documentation>
 	</template>
 </service>
