@@ -6,6 +6,9 @@ remctl 2.16 (unreleased)
     command (not subcommand or arguments) that causes a program to be
     run.  Thanks, Thomas L. Kula.
 
+    Add an example SMF manifest for the remctld daemon in
+    examples/remctld.xml.  Contributed by Peter Eriksson.
+
     Fix PHP test suite to work with PHP 5.3, which no longer passes
     environment variables down to the running test program.
 
